<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ui.fragments.LaunchpadDetails">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="4dp"
            android:text="auiwhdiuawhf"
            android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/nameLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="4dp"
            android:text="@string/name"
            app:layout_constraintBottom_toBottomOf="@id/name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/status" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:text="awoidaoiwjfo"
            android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/barrier2"
            app:layout_constraintTop_toBottomOf="@id/status" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/location"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:text="awoidaoiwjfo"
            android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/barrier2"
            app:layout_constraintTop_toBottomOf="@+id/name" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/locationLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:text="@string/location"
            app:layout_constraintBottom_toBottomOf="@+id/location"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/location" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/detailsLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:text="@string/details"
            app:layout_constraintBottom_toBottomOf="@id/details"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/location" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/details"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:text="awdawdawda"
            android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/barrier2"
            app:layout_constraintTop_toBottomOf="@id/location" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/launchedLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="4dp"
            android:text="@string/launched_vehicles"
            android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
            app:layout_constraintTop_toBottomOf="@id/details" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/vehicles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:inputType="textMultiLine"
            android:text="awoidjaowijf"
            android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
            app:layout_constraintTop_toBottomOf="@id/launchedLabel" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="right"
            app:constraint_referenced_ids="latitudeLabel, longitudeLabel, locationLabel, nameLabel, detailsLabel" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/attemptedLaunchesLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="4dp"
            android:text="@string/attempted_launches"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/vehicles"
            app:layout_constraintWidth_percent="0.5" />


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/successfulLaunchesLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="4dp"
            android:text="@string/successful_launches"
            app:layout_constraintStart_toEndOf="@id/attemptedLaunchesLabel"
            app:layout_constraintTop_toBottomOf="@id/vehicles"
            app:layout_constraintWidth_percent="0.5" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/attemptedLaunches"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="4dp"
            android:text="awoidjaoid"
            android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/attemptedLaunchesLabel"
            app:layout_constraintWidth_percent="0.5" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/successfulLaunches"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="4dp"
            android:text="awoidjaoid"
            android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/successfulLaunchesLabel"
            app:layout_constraintWidth_percent="0.5" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/wikipedia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:padding="4dp"
            android:text="awhfauehf"
            app:layout_constraintTop_toBottomOf="@id/successfulLaunches" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/latitudeLabel"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:padding="4dp"
            android:text="@string/latitude"
            app:layout_constraintBottom_toBottomOf="@+id/latitude"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/wikipedia" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/longitudeLabel"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:padding="4dp"
            android:text="@string/longitude"
            app:layout_constraintBottom_toBottomOf="@+id/longitude"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/latitudeLabel" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/latitude"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:text="@string/latitude"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/barrier2"
            app:layout_constraintTop_toBottomOf="@id/wikipedia" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/longitude"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:text="@string/longitude"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/barrier2"
            app:layout_constraintTop_toBottomOf="@+id/latitude" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/showOnMap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/show_on_map"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/longitude" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
